--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>login</servlet-name>
-        <servlet-class>Servlets.login</servlet-class>
+        <servlet-name>logear</servlet-name>
+        <servlet-class>Servlets.logear</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>logear</servlet-name>
+        <url-pattern>/logear</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
