--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -48,13 +49,18 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.spring-framework400.classpath}:\
+    ${libs.jstl.classpath}:\
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -63,16 +69,16 @@ javac.test.classpath=\
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
-javadoc.author=false
+javadoc.author=true
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
-javadoc.version=false
+javadoc.version=true
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
